--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "lamer news on angular 1.x",
   "main": "index.js",
   "dependencies": {
+    "angular": "^1.6.0",
+    "angular-route": "^1.6.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.1"
