--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-cookies": "^1.6.0",
+    "angular-loader": "^1.6.0",
     "angular-route": "^1.6.0",
+    "angular-ui-router": "^0.3.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.1"
