--- a/package.json
+++ b/package.json
@@ -11,11 +11,23 @@
     "angular-ui-router": "^0.3.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.7.1"
+    "mongoose": "^4.7.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "webpack-dev-server --progress --colors --hot --inline --history-api-fallback",
+    "build": "webpack",
+    "build-production": "NODE_ENV=production && webpack -p"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.8",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.3.13",
+    "css-loader": "^0.26.0",
+    "nodemon": "^1.11.0",
+    "style-loader": "^0.13.1"
   },
   "author": "",
   "license": "ISC"
