--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "angular-cookies": "^1.6.0",
     "angular-loader": "^1.6.0",
     "angular-route": "^1.6.0",
-    "angular-ui-router": "^0.3.2",
+    "angular-ui-router": "^1.0.0-beta.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.1",
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.3.13",
     "css-loader": "^0.26.0",
+    "exports-loader": "^0.6.3",
     "nodemon": "^1.11.0",
     "style-loader": "^0.13.1"
   },
