--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "angular-route": "^1.6.0",
     "angular-ui-router": "^1.0.0-beta.2",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
